<resources>
    <string name="app_name">GitTest</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="error_orgs_load">Loading account &amp; organizations failed</string>
    <string name="error_issues_load">Loading issues failed</string>
    <string name="error_repos_load">Loading repositories failed</string>
    <string name="error_repo_load">Loading repository failed</string>
    <string name="error_gist_load">Loading Gist failed</string>
    <string name="error_news_load">Loading news failed</string>
    <string name="error_followers_load">Loading followers failed</string>
    <string name="error_people_load">Loading people failed</string>
    <string name="error_person_load">Loading person failed</string>
    <string name="error_gist_file_load">Loading Gist file content failed</string>
    <string name="error_gists_load">Loading Gists failed</string>
    <string name="error_issue_load">Loading issue failed</string>
    <string name="error_collaborators_load">Loading collaborators failed</string>
    <string name="error_milestones_load">Loading milestones failed</string>
    <string name="error_labels_load">Loading labels failed</string>
    <string name="error_bookmarks_load">Loading bookmarks failed</string>
    <string name="error_members_load">Loading members failed</string>
    <string name="error_commits_load">Loading commits failed</string>
    <string name="error_commit_load">Loading commit failed</string>
    <string name="error_file_load">Loading file failed</string>
    <string name="error_code_load">Loading code failed</string>
    <string name="error_refs_load">Loading branches &amp; tags failed</string>
    <string name="error_following_person">Following failed</string>
    <string name="error_unfollowing_person">Unfollowing failed</string>
    <string name="error_checking_following_status">Checking following status failed</string>
    <string name="error_starring_repository">Starring failed</string>
    <string name="error_unstarring_repository">Unstarring failed</string>
    <string name="error_checking_starring_status">Checking starring status failed</string>
    <string name="error_rendering_markdown">Rendering markdown failed</string>
    <string name="loading_gist">Loading Gist…</string>
    <string name="random_gist">Loading Random Gist…</string>
    <string name="loading_more_issues">Loading More Issues…</string>
    <string name="loading_issues">Loading Issues…</string>
    <string name="loading_comments">Loading Comments…</string>
    <string name="loading_repositories">Loading Repositories…</string>
    <string name="loading_issue">Loading Issue…</string>
    <string name="loading_news">Loading News…</string>
    <string name="loading_followers">Loading Followers…</string>
    <string name="loading_people">Loading People…</string>
    <string name="loading_gists">Loading Gists…</string>
    <string name="loading_collaborators">Loading Collaborators…</string>
    <string name="loading_milestones">Loading Milestones…</string>
    <string name="loading_labels">Loading Labels…</string>
    <string name="loading_commits">Loading Commits…</string>
    <string name="max_commits">Max Limit Reached</string>
    <string name="loading_files_and_comments">Loading Files &amp; Comments…</string>
    <string name="loading_refs">Loading Branches &amp; Tags…</string>
    <string name="no_bookmarks">No Bookmarks</string>
    <string name="no_repositories">No Repositories</string>
    <string name="no_issues">No Issues</string>
    <string name="no_gists">No Gists</string>
    <string name="no_people">No People</string>
    <string name="no_followers">No Followers</string>
    <string name="no_members">No Members</string>
    <string name="no_news">Welcome</string>
    <string name="no_commits">No Commits</string>
    <string name="updating_assignee">Updating Assignee…</string>
    <string name="updating_issue">Updating Issue…</string>
    <string name="updating_labels">Updating Labels…</string>
    <string name="updating_milestone">Updating Milestone…</string>
    <string name="news">News</string>
    <string name="issues">Issues</string>
    <string name="gists">Gists</string>
    <string name="commits">Commits</string>
    <string name="find_repositories">Search Rails Repos</string>
    <string name="find_issues">Find Issues</string>
    <string name="search_title">Search…</string>
    <string name="clear_search_history">Clear History</string>
    <string name="search_history_cleared">Search history cleared</string>
    <string name="login_activity_authenticating">Logging in…</string>
    <string name="creating_gist">Creating Gist…</string>
    <string name="create">Create</string>
    <string name="create_gist">Create Gist</string>
    <string name="gist_content_hint">puts \'Hello World!\'</string>
    <string name="make_public">Make this Gist public</string>
    <string name="gist_file_name_hint">file.rb</string>
    <string name="gist">Gist</string>
    <string name="comments">Comments</string>
    <string name="files">Files</string>
    <string name="open">Open</string>
    <string name="random">Random</string>
    <string name="file_name">File Name</string>
    <string name="file_content">File Content</string>
    <string name="new_gist">New Gist</string>
    <string name="filter">Filter</string>
    <string name="bookmark">Bookmark</string>
    <string name="comment">Comment</string>
    <string name="delete">Delete</string>
    <string name="refresh">Refresh</string>
    <string name="dashboard_issues_title">Issue Dashboard</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="gists_title">Gists</string>
    <string name="issue_title">Issue #</string>
    <string name="pull_request_title">Pull Request #</string>
    <string name="gist_title">Gist\u0020</string>
    <string name="filter_issues_title">Filter Issues</string>
    <string name="create_comment_title">Create Comment</string>
    <string name="comment_hint">Enter a comment</string>
    <string name="show_more">Show More…</string>
    <string name="repositories">Repositories</string>
    <string name="issues_title">Issues</string>
    <string name="edit_labels">Edit Labels</string>
    <string name="milestone_prefix">Milestone:</string>
    <string name="edit_milestone">Edit Milestone</string>
    <string name="edit_assignee">Edit Assignee</string>
    <string name="description">Description</string>
    <string name="gist_description_hint">Android created Gist</string>
    <string name="title">Title</string>
    <string name="edit">Edit</string>
    <string name="starring_gist">Starring Gist…</string>
    <string name="unstarring_gist">Unstarring Gist…</string>
    <string name="accounts_label">Accounts</string>
    <string name="select_assignee">Select Assignee</string>
    <string name="select_milestone">Select Milestone</string>
    <string name="select_labels">Select Labels</string>
    <string name="select_ref">Select Branch or Tag</string>
    <string name="no_milestone">No milestone</string>
    <string name="unassigned">No one is assigned</string>
    <string name="assigned">is assigned</string>
    <string name="no_gists_found">No Gists found</string>
    <string name="confirm_gist_delete_title">Confirm Delete</string>
    <string name="confirm_gist_delete_message">Are you sure you want to delete this Gist?</string>
    <string name="deleting_gist">Deleting Gist…</string>
    <string name="creating_comment">Creating comment…</string>
    <string name="confirm_bookmark_delete_message">Are you sure you want to remove this bookmark?</string>
    <string name="issue_dashboard">Issue Dashboard</string>
    <string name="new_issue">New Issue</string>
    <string name="anonymous">Anonymous</string>
    <string name="message_filter_saved">Issue filter saved to bookmarks</string>
    <string name="recent">Recent</string>
    <string name="section_issue_status">Status:</string>
    <string name="status_open">Open</string>
    <string name="status_closed">Closed</string>
    <string name="section_issue_assigned">Assigned To:</string>
    <string name="assignee_anyone">Anyone</string>
    <string name="section_issue_milestone">Milestone:</string>
    <string name="none">None</string>
    <string name="section_issue_labels">Labels:</string>
    <string name="log_in">Log in</string>
    <string name="signup_link">New to GitHub? &lt;a href=\"https://github.com/plans\">Click here&lt;/a> to sign up</string>
    <string name="connection_failed">Unable to connect to GitHub</string>
    <string name="invalid_login_or_password">Please enter a valid login &amp; password</string>
    <string name="invalid_password">Please enter a valid password.</string>
    <string name="password">Password</string>
    <string name="login_or_email">Login or Email</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="followers_self">Followers</string>
    <string name="following_self">Following</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="star">Star</string>
    <string name="unstar">Unstar</string>
    <string name="members">Members</string>
    <string name="closing_issue">Closing Issue…</string>
    <string name="reopening_issue">Reopening Issue…</string>
    <string name="avatar">Avatar</string>
    <string name="creating_issue">Creating Issue…</string>
    <string name="prefix_created">created\u0020</string>
    <string name="prefix_updated">updated\u0020</string>
    <string name="prefix_opened">opened\u0020</string>
    <string name="clear">Clear</string>
    <string name="open_issues">Open Issues</string>
    <string name="closed_issues">Closed Issues</string>
    <string name="confirm_bookmark_delete_title">Remove Bookmark</string>
    <string name="save">Save</string>
    <string name="apply">Apply</string>
    <string name="labels_prefix">Labels:</string>
    <string name="assignee">Assignee</string>
    <string name="milestone">Milestone</string>
    <string name="labels">Labels</string>
    <string name="issue_confirm_close_message">Are you sure you want to close this issue?</string>
    <string name="issue_confirm_reopen_message">Are you sure you want to reopen this issue?</string>
    <string name="issue_confirm_close_title">Close Issue</string>
    <string name="issue_confirm_reopen_title">Reopen Issue</string>
    <string name="closed">Closed</string>
    <string name="no_description_given">No description given.</string>
    <string name="close">Close</string>
    <string name="reopen">Reopen</string>
    <string name="title_invalid_github_url">Invalid GitHub URL</string>
    <string name="message_invalid_github_url">The following URL could not be opened by this application:\n{0}</string>
    <string name="recently_viewed">RECENTLY VIEWED</string>
    <string name="cancel">Cancel</string>
    <string name="authenticator_conflict_title">App Conflict</string>
    <string name="authenticator_conflict_message">Another installed app is already configured for GitHub authentication.\n\nYou must remove the other app from the Accounts &amp; sync settings and uninstall it before the GitHub app can be used.</string>
    <string name="opening_repository">Opening {0}…</string>
    <string name="commit_compare_title">Commit Compare</string>
    <string name="commit_prefix">Commit\u0020</string>
    <string name="parent_prefix">Parent\u0020</string>
    <string name="authored">authored</string>
    <string name="committed">committed</string>
    <string name="diff_line_message">What would you like to do?</string>
    <string name="comment_on_line">Comment on line</string>
    <string name="view_entire_file">View entire file</string>
    <string name="share">Share</string>
    <string name="show_password">Show password</string>
</resources>