<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/m_comment"
        android:icon="@drawable/action_comment"
        android:showAsAction="never"
        android:title="@string/comment"/>
    <item
        android:id="@+id/m_delete"
        android:icon="@drawable/menu_delete"
        android:showAsAction="never"
        android:title="@string/delete"/>
    <item
        android:id="@+id/m_star"
        android:icon="@drawable/menu_star"
        android:showAsAction="never"
        android:title="@string/star"/>
    <item
        android:id="@+id/m_share"
        android:icon="@drawable/menu_share"
        android:showAsAction="never"
        android:title="@string/share"/>
    <item
        android:id="@+id/m_refresh"
        android:icon="@drawable/menu_refresh"
        android:showAsAction="never"
        android:title="@string/refresh"/>

</menu>