<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/m_comment"
        android:icon="@drawable/action_comment"
        android:showAsAction="never"
        android:title="@string/comment"/>
    <item
        android:id="@+id/m_edit"
        android:icon="@drawable/menu_edit"
        android:showAsAction="never"
        android:title="@string/edit"/>
    <item
        android:id="@+id/m_state"
        android:icon="@drawable/menu_issue_close"
        android:showAsAction="never"
        android:title="@string/close"/>
    <item
        android:id="@+id/m_share"
        android:icon="@drawable/menu_share"
        android:showAsAction="never"
        android:title="@string/share"/>
    <item
        android:id="@+id/m_refresh"
        android:icon="@drawable/menu_refresh"
        android:showAsAction="never"
        android:title="@string/refresh"/>

</menu>