<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_signup"
        style="@style/SubtitleText"
        android:layout_width="match_parent"
        android:background="@drawable/sign_up_background"
        android:gravity="center"
        android:padding="5dp"
        android:textColor="@color/sign_up_text"
        android:textColorLink="@color/sign_up_text_link"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:layout_gravity="center"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="5dp" >
            

            <AutoCompleteTextView
                android:id="@+id/et_login"
                style="@style/LoginEditText"
                android:completionThreshold="1"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:layout_marginTop="4dp"
                android:hint="@string/login_or_email"
                android:nextFocusDown="@+id/et_password" />

            <EditText
                android:id="@+id/et_password"
                style="@style/LoginEditText"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:layout_marginTop="8dp"
                android:typeface="monospace" />
            
            <CheckBox
              android:id="@+id/cb_show_password"
              style="@style/SubtitleText"
              android:layout_marginTop="2dp"
              android:singleLine="true"
              android:text="@string/show_password"
              android:textColor="@color/text"
              android:visibility="invisible" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/log_in" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>